--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,29 @@
-.App {
-  text-align: center;
+.login-container {
+	display: flex;
+	align-items: center;
+	width: 100%;
+	height: 80vh;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.form-box {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	min-width: 300px;
+	width: 30%;
+	margin: 0 auto;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.form-box h1 {
+	font-size: var(--font-size-xx-large);
+	font-weight: var(--font-weight-bold);
+	color: var(--color-black);
+	margin-bottom: 2rem;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+form {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	width: 100%;
 }
