--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,62 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+:root {
+	--color-orange: #f21d08;
+	--color-light-orange: #e0b7ac;
+	--color-black: #080708;
+	--color-dark-gray: #333;
+	--color-gray: #666;
+	--color-gray-2: #a4a3a3;
+	--color-light-gray: #f2f1f1;
+	--color-purple-taupe: #564e55;
+	--color-dark-blue-gray: #686d92;
+	--color-red: #ff0000;
+
+	--font-size-small: 0.8rem;
+	--font-size-medium: 1rem;
+	--font-size-large: 1.2rem;
+	--font-size-x-large: 1.5rem;
+	--font-size-xx-large: 2rem;
+	--font-size-xxx-large: 2.5rem;
+
+	--font-family-sans-serif: 'Roboto', sans-serif;
+	--font-family-monospace: 'Source Code Pro', monospace;
+
+	--font-weight-light: 300;
+	--font-weight-normal: 400;
+	--font-weight-bold: 500;
+
+	--border-radius-small: 0.5rem;
+	--border-radius-medium: 1rem;
+	--border-radius-large: 2rem;
+	--border-radius-x-large: 3rem;
+	--border-radius-xx-large: 4rem;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+* {
+	box-sizing: border-box;
+	margin: 0;
+	padding: 0;
+	list-style: none;
+	text-decoration: none;
+}
+
+body {
+	font-family: var(--font-family-sans-serif);
+	font-weight: var(--font-weight-normal);
+	color: var(--color-black);
+}
+
+.container {
+	max-width: 1200px;
+	margin: 0 auto;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+a {
+	user-select: none;
 }
